data/issues_nolabel/nolabel_test_15565.txt
Linux GPU build failing (__CUDACC_VER__ is no longer supported)

System information

Have I written custom code (as opposed to using a stock example script provided in TensorFlow):
No
OS Platform and Distribution (e.g., Linux Ubuntu 16.04):
Linux Ubuntu 17.10, kernel 4.14.8
TensorFlow installed from (source or binary):
Source (failed build)
TensorFlow version (use command below):
master
Python version:
3.6
Bazel version (if compiling from source):
0.9.0
GCC/Compiler version (if compiling from source):
4.9
CUDA/cuDNN version:
9.0/7.0.4
GPU model and memory:
Two 1080 Ti (11Gb each)
Exact command to reproduce:
bazel build -c opt --copt=-mavx --copt=-mavx2 --copt=-mfma --copt=-mfpmath=both --copt=-msse4.2 --config=cuda //tensorflow/tools/pip_package:build_pip_package

Describe the problem
I note the build bot is failing too for Linux GPU, since the latest merge in the past 1 hour.
Source code / logs
ERROR: /home/daniel/build/tensorflow/tensorflow/contrib/image/BUILD:106:1: error while parsing .d file: /home/daniel/.cache/bazel/_bazel_daniel/a40ff47569db15fec953d4e5b5812083/execroot/org_tensorflow/bazel-out/k8-py3-opt/bin/tensorflow/contrib/image/_objs/python/ops/_distort_image_ops_gpu/tensorflow/contrib/image/kernels/adjust_hsv_in_yiq_op_gpu.cu.pic.d (No such file or directory)
In file included from /usr/local/cuda-9.0/bin/../targets/x86_64-linux/include/common_functions.h:50:0,
from /usr/local/cuda-9.0/bin/../targets/x86_64-linux/include/cuda_runtime.h:115,
from :0:
/usr/local/cuda-9.0/bin/../targets/x86_64-linux/include/crt/common_functions.h:64:24: error: token ""CUDACC_VER is no longer supported.  Use CUDACC_VER_MAJOR, CUDACC_VER_MINOR, and CUDACC_VER_BUILD instead."" is not valid in preprocessor expressions
#define CUDACC_VER "CUDACC_VER is no longer supported.  Use CUDACC_VER_MAJOR, CUDACC_VER_MINOR, and CUDACC_VER_BUILD instead."
^
./tensorflow/core/util/cuda_device_functions.h:37:7: note: in expansion of macro 'CUDACC_VER'
#elif CUDACC_VER >= 7050
^
Target //tensorflow/tools/pip_package:build_pip_package failed to build
Use --verbose_failures to see the command lines of failed build steps.
INFO: Elapsed time: 237.382s, Critical Path: 22.79s